--- a/hexo/_config.yml
+++ b/hexo/_config.yml
@@ -103,4 +103,6 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: 'https://%WWW_BLOG_DEPLOY_TOKEN%@github.com/xiayy860612/www.git'
+  branch: blog
