--- a/hexo/_config.yml
+++ b/hexo/_config.yml
@@ -34,14 +34,17 @@ skip_render:
 # Writing
 new_post_name: :title.md # File name of new posts
 default_layout: post
-titlecase: false # Transform title into titlecase
+titlecase: true # Transform title into titlecase
 external_link:
   enable: true # Open external links in new tab
   field: site # Apply to the whole site
   exclude: ''
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
+marked:
+  prependRoot: true
+  postAsset: true
 relative_link: false
 future: true
 highlight:
@@ -99,6 +102,28 @@ ignore:
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: next
+# NexT theme config
+theme_config:
+  # author: Amos
+  darkmode: false
+  scheme: Pisces
+  language: zh-Hans
+  menu:
+    home: / || home
+    #about: /about/ || user
+    tags: /tags/ || tags
+    categories: /categories/ || th
+    # archives: /archives/ || archive
+    #schedule: /schedule/ || calendar
+    #sitemap: /sitemap.xml || sitemap
+    #commonweal: /404/ || heartbeat
+  creative_commons:
+    license: by-nc-sa
+    sidebar: true
+    post: true
+    language: zh-Hans
+  social:
+    GitHub: https://github.com/xiayy860612 || github
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
@@ -106,3 +131,4 @@ deploy:
   type: git
   repo: 'https://%WWW_BLOG_DEPLOY_TOKEN%@github.com/xiayy860612/www.git'
   branch: blog
+
