--- a/hexo/_config.yml
+++ b/hexo/_config.yml
@@ -131,7 +131,25 @@ theme_config:
     field: post
     format: html
     limit: 100
+  busuanzi_count:
+    enable: true
+  symbols_count_time:
+    separated_meta: true
+    item_text_post: true
+    item_text_total: true
+  related_posts:
+    enable: true
+    title: # Custom header, leave empty to use the default one
+    display_in_home: true
+    params:
+      maxCount: 5
   
+symbols_count_time:
+  symbols: true
+  time: true
+  total_symbols: true
+  total_time: false
+
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
