--- a/hexo/_config.yml
+++ b/hexo/_config.yml
@@ -143,12 +143,32 @@ theme_config:
     display_in_home: true
     params:
       maxCount: 5
+  gitalk:
+    enable: true
+    github_id: xiayy860612
+    repo: www
+    client_id: 075e8d2ca1f0a570b9e7
+    client_secret: 708d78a15aa35827ea17bdd6467aaeada77183c3
+    admin_user: xiayy860612
   
 symbols_count_time:
   symbols: true
   time: true
   total_symbols: true
   total_time: false
+plantuml:
+  #  Local or PlantUMLServer.
+  render: "PlantUMLServer"
+  # the server,you can change your self-hosted sever for privacy
+  server: "http://www.plantuml.com/plantuml"
+  # "inline": <svg>xxx<svg/>
+  # "inlineUrlEncode": <img src='data:image/svg+xml;>
+  # "inlineBase64": <img src='data:image/svg+xml;base64>
+  # "localLink": <img src="/assert/puml/xxxx.svg">
+  # "externalLink": <img src="http://www.plantuml.com/plantuml/svg/xxx">
+  link: "inline"
+  # common options: svg/png
+  outputFormat: "svg"
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
