!2 migrate old docs * update

--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 爱码士
+title: 爱码士Amos
 subtitle: '行到水穷处，坐看云起时'
 description: ''
 keywords:
