feat: update hexo quick guide

--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -112,7 +112,7 @@ deploy:
   message: Site updated on {{ now('YYYY-MM-DD HH:mm:ss') }}
 
 search:
-  path: search.xml
+  path: search.json
   field: post
   content: true
   format: html
